--- a/_posts/2019-07-09-the-us-narrative-today.html
+++ b/_posts/2019-07-09-the-us-narrative-today.html
@@ -2574,107 +2574,107 @@ stories:
   domain: http://www.cnhi.com/register/
   link: https://www.cnhi.com/home-owner-discovers-burglar-offered-hit-of-meth/article_c7c39b0e-9dc9-11e9-9b90-fb94808d669a.html
 images:
-- name: amusement-park-amusement-park-2-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-colorful-dream.jpg
-- name: ellis-island-ellis-island-room-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-monet-one.jpg
-- name: downtown-los-angeles-downtown-la-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-oily-mcoilface.JPG
-- name: white-house-lawn-white-house-lawn-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-dali-two.jpg
-- name: store-on-corner-oldcabin-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
-- name: aws-s3-diamondcreek-diamondcreek-still-1200.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-1200.jpg
-- name: rain-princess-DSC_0015.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0015.jpg
-- name: store-on-corner-oldcabin-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-blue-circuit.jpg
-- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
-- name: windowmountain-window-mountain-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-colorful-blocks.jpg
-- name: mistywoods-babyfoot-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-crafty-painting.jpg
-- name: paris-paris-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-oily-mcoilface.jpg
-- name: statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-umberto-bocc.jpg
-- name: oldsmallboat-oldsmallboat-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-dali-three.jpg
-- name: rain-princess-IMG_7319.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7319.jpg
-- name: white-house-lawn-white-house-lawn-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-oily-mcoilface.jpg
-- name: beach-clouds-lifeguard-beachclouds-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-rainbow-festival.jpg
-- name: aws-s3-stories-legalstatue-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-legalstatue-light-dali.jpg
-- name: dc-statue-dcstatue-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dali-two.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-yellow-paper.jpg
-- name: art-lange-otto-the-mocking-of-christ.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-lange-otto-the-mocking-of-christ.jpg
-- name: power-lines-power-lines-empty-space-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-aqua.jpg
-- name: wave-DSC_0004.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wave-DSC_0004.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-gred-mash.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-gred-mash.JPG
-- name: yosemite-yosemite-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-smoking-cigarette.jpg
-- name: downtown-trucksilo-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-atari-missle.jpg
-- name: cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-umberto-bocc.jpg
-- name: downtheline-downtheline-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-gan-vogh.jpg
-- name: server-cloud-server-racks-clouds-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-blue-electricity.jpg
-- name: gears-4882162452-fa3126b38d-b-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-pablo-blue.jpg
-- name: server-cloud-server-racks-clouds-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-green-zuma.jpg
-- name: downtown-los-angeles-downtown-la-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-feed-people.JPG
-- name: bordercrossing-bordercrossing-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-dali.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gred-mash.jpg
-- name: carry-load-carryload-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-green-zuma.jpg
-- name: store-on-corner-oldcabin-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-emily-carr.jpg
-- name: containership-containership-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-circuit-3.jpg
-- name: white-house-whitehouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-far-away.jpg
-- name: nyc-flag-nycflag-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-wols.jpg
-- name: nyc-flag-nycflag-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-bright-sand.jpg
-- name: nazi-invasion-IMG_4430.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4430.jpg
-- name: dragon-desert-desert-dragon-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-china-prop.jpg
-- name: machine-road-machine-road-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-ww2-dresden.jpg
-- name: birdhouse-birdhouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-aqua.jpg
-- name: nazi-invasion-DSC_0033.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0033.jpg
-- name: oldhotel-oldhotel-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-umberto-bocc.jpg
-- name: capital-battle-capitolbattle-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-crafty-painting.jpg
-- name: fence-mexico-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-rainbow-festival.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-wols.jpg
-- name: stories-amusement-park-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-amusement-park-2-light-dali.jpg
-- name: downtown-los-angeles-downtown-la-dark-rain.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-dark-rain.JPG
+- name: server-racks-door-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door-marcel-duchamp.jpg
+- name: stories-new-beachclouds-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-beachclouds-blue-circuit.jpg
+- name: cargo-ship-cargo-ship-on-sea-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-satan-red.jpg
+- name: oldroad-old-road-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-dark-rain.jpg
+- name: stories-servers-hallway-door.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-servers-hallway-door.jpg
+- name: store-on-corner-oldcabin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-rain.jpg
+- name: window-window-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-smooth-ride.jpg
+- name: old-church-oldchurch-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
+- name: crow-crow-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-circuit.jpg
+- name: crow_plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_plentiful.jpg
+- name: power-lines-power-lines-empty-space-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-horiz-circuit.jpg
+- name: gypsy-wagon-gypsywagon-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-light-dali.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-cinnamon-rolls.jpg
+- name: old-school-house-old-schoolhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-pablo-blue.jpg
+- name: status-berlin-status-berlin-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-post-modern.jpg
+- name: machine-road-machine-road-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-internet-numbers.jpg
+- name: bordercrossing-bordercrossing-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-dark-rain.jpg
+- name: store-on-corner-store-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-monet-one.jpg
+- name: birdhouse-birdhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-kand-two.jpg
+- name: old-granary-field-oldhouse-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-light-dali.jpg
+- name: docks-docks-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-smoking-cigarette.jpg
+- name: docks-docks-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-sand-paper.jpg
+- name: dc-statue-dcstatue-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dark-rain.jpg
+- name: old-cabin-oldcabin-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-crabapple.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-clean-view.jpg
+- name: border-fence-border-fence-on-hill-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-yellow-paper.jpg
+- name: lincoln-memorial-lincolnmemorial-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-pablo-blue.jpg
+- name: stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-13439120-10154285627219813-3054276594176638940-n-copper-circuit-2.jpg
+- name: docks-docks-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-copper-circuit-2.jpg
+- name: rain-princess-P6210065.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P6210065.jpg
+- name: window-window-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-constitution.jpg
+- name: nyc-flag-nycflag-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-blue-electricity.jpg
+- name: white-house-lawn-white-house-window-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-colorful-dream.jpg
+- name: white-house-whitehouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-umberto-bocc.jpg
+- name: old-house-oldhouse-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-pablo-blue.jpg
+- name: oldhouse-granaryfield-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-pond.jpg
+- name: gypsy-wagon-gypsywagon-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-kand-two.jpg
+- name: old-school-house-old-schoolhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-blocks.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-missle.JPG
+- name: castle-wall-DSC-0067-emily-carr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-emily-carr.JPG
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-yellow-paper.jpg
+- name: bluelake-green-zuma-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-green-zuma-file-00-01-17-38.jpg
+- name: downtown-los-angeles-downtown-la-mucha-mult.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-mucha-mult.JPG
+- name: mediterranean-mediterranean-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-bright-sand.jpg
+- name: meadowbutterfly-meadow-butterfly-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-pablo-blue.jpg
+- name: old-granary-field-granaryfield-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-crunch-paper.jpg
+- name: nyc-flag-nycflag-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-dream.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-brush.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-deep-connections.jpg
 ---
 Inaugural July 4th Golf Cart Parade Through Park West.&nbsp;Duchess Meghan In Talks For Vogue Column.&nbsp;Meals On Wheels Of The Sandhills To Expand Into Seven Lakes Area.&nbsp;July Book Buzz Is Out Of This World.&nbsp;Longtime Iron Range Judge To Retire.&nbsp;Pastor Gregory Ryan Wolfe.&nbsp;Union Tennis Earns First State Championship.&nbsp;Craig Athletes Have Happy Hoops Independence Day With Tourney Win In Meeker.&nbsp;
